fix(hotfix/fix-box-one): fix extra padding right on media query (final change)

--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ html{
     height: 100%;
     width: 100%;
     overflow: hidden;
-    overscroll-behavior: none
+    overscroll-behavior: none;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
     height: 100%;
     width: 100%;
     overflow: auto;
-    overscroll-behavior: none
+    overscroll-behavior: none;
 }
 
 #header {
@@ -309,6 +309,10 @@ h2{
         column-gap: 3.5vw;
         row-gap: 2.9vh;
         z-index: 3;
+    }
+
+    #box-one{
+        padding-right: 0;
     }
 
     .big-box{
